# daywater

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.demo  README.md  build_demo.py  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
cheats/: nightfire_nohud.gecko
frontend/: index.html  knowledge.html  project.html  settings.html  setup.html
frontend/shared/: api.js  layout.js  style.css
frontend/task/: new.html  run.html
samples/nightfire_hud_off/: expected.gecko  hint.txt  sample.toml
scripts/: build_analysis.py  gen_nightfire_assets.py  smoke_test_expected.py
src/: config.py  findings.py  logging.py
src/agent/: __init__.py  discovery.py  findings_tools.py  ghidra_tools.py  job_spec.py  loader.py  ppc_tools.py  presets.py  prompts.py  research_tools.py  runner.py  runtime_tools.py  sample_builder.py  scorer.py  scorer_builder.py  state.py  task.py  tool_builder.py  tools.py  visual_gecko_tool.py  winddown.py
src/agent/prompts/: __init__.py  builder.py  hud.py  noclip.py  position.py  shared.py
src/agent/prompts/strategies/: __init__.py  find_code_patch.py  find_ram_address.py  static_research.py
src/agent/tools/: __init__.py  builder.py  capture.py  controller.py  discovery.py  findings.py  ghidra.py  memory.py  ppc.py  research.py
src/agent/tools/gecko/: __init__.py  knowledge.py  live.py  visual.py
src/api/: app.py  events.py
src/api/routes/: knowledge.py  projects.py  savestates.py  schema.py  settings.py  setup.py  tasks.py
src/cli/: __init__.py  diff.py  probe.py
src/core/: __init__.py  config.py  logging.py  mask.py  paths.py  sessions.py  uploads.py
src/core/dolphin/: __init__.py  debugger.py  diff.py  gecko.py  input.py  memory.py  runner.py  session.py  session_ref.py  watcher.py
src/core/dolphin/docker/: Dockerfile  GFX.ini  entrypoint.sh
src/core/ghidra/: __init__.py  analyze.py  cache.py  dol.py
src/core/knowledge/: __init__.py  findings.py  gecko_codes.py  research.py
src/core/runner/: __init__.py  dolphin_runner.py
src/dolphin/: __init__.py  debugger.py  diff.py  input.py  memory.py  runner.py  session.py  session_ref.py  watcher.py
src/dolphin/docker/: Dolphin.ini
src/ghidra/: __init__.py  analyze.py  cache.py  notes.py
src/knowledge/: __init__.py
src/runner/: __init__.py  dolphin_runner.py
src/web/: __init__.py  app.py  controller_mapping.py  events.py  mask.py  runner.py  sample_builder.py  sessions.py  uploads.py
src/web/api/: __init__.py  deps.py  knowledge.py  processes.py  projects.py  savestates.py  settings.py  setup.py  tasks.py
src/web/static/: index.html  mask-painter.js  style.css
tests/: test_placeholder.py  test_scorer.py
