[project]
name = "spectre"
version = "0.1.0"
description = "Automatically find HUD disabling cheats in games emulated on dolphin"
requires-python = ">=3.13"
dependencies = [

    # Validation
    "pydantic>=2.12.0",

    # Logging & observability
    "structlog>=25.5.0",
    "sentry-sdk>=2.49.0",

    # Environment
    "python-dotenv>=1.0.0",

    # Image / frame handling
    "pillow>=11.0.0",
    "numpy>=2.0.0",
]

[project.scripts]
spectre-probe = "src.cli.probe:main"
spectre-diff = "src.cli.diff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "pip-audit>=2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
